--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
     "globals": "^15.9.0",
     "vite": "^5.4.1"
   },
-  "homepage": "https://shigenogoro.github.io/portfolio"
+  "homepage": "https://shigenogoro.github.io/portfolio/"
 }
